updated background image

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ img {
 /* page titles */
 
 .pagetitle_div {
-  background-image: url(woodbackground.jpg);
+  background-image: url(map.jpg);
   background-size: cover;
   background-color: #6a8ea4;
   color: white;
