--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,14 @@ img {
   background-color: #922f2f;
   color: white;
 }
+
+/* buttons */
+
+.button {
+  background-color: #922f2f;
+  color: white;
+  height: 20px;
+  width: 30px;
+  margin: auto;
+  font-family: Georgia, serif;
+}
