--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ img {
   vertical-align: middle;
   font-size: 80px;
   position: absolute;
-  top: 40%;
+  top: 150px;
 }
 
 /* content */
@@ -169,8 +169,8 @@ img {
   font-family: Georgia, serif;
   padding: 16px 14px;
   font-size: 17px;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 175px;
 }
 
 .button:hover {
