--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ img {
   background-color: white;
   color: white;
   height: 350px;
-  /*display: flex;*/
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -65,10 +65,6 @@ img {
   font-family: Georgia, serif;
   vertical-align: middle;
   font-size: 80px;
-  position: absolute;
-  top: 175px;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
 
 /* content */
@@ -171,10 +167,7 @@ img {
   font-family: Georgia, serif;
   padding: 16px 14px;
   font-size: 17px;
-  position: absolute;
-  top: 250px;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  display: inline-block;
 }
 
 .button:hover {
